# esign

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  kube.yaml
emails/: 01b0769a-d293-458d-b877-4560328723f6.eml  10dabb8a-1fb6-49fe-a218-3c2fbf2ec0af.eml  6d218b3b-ec52-49a4-8fc2-68ecb1173e98.eml  6d218b3b-ec52-49a4-8fc2-68ecb1173e98.eml:OECustomProperty  88c2f60b-8ffd-451c-a86f-6932f33fa257.eml  88c2f60b-8ffd-451c-a86f-6932f33fa257.eml:OECustomProperty  8d2bd0b7-3e3c-470e-b66e-cc3e7ebf992d.eml  8d2bd0b7-3e3c-470e-b66e-cc3e7ebf992d.eml:OECustomProperty
migrations/2021-10-22-160632_create_templates/: down.sql  up.sql
migrations/2021-10-23-160059_create_envelope/: down.sql  up.sql
migrations/2021-12-15-163500_create_session/: up.sql
src/: csrf.rs  files.rs  lib.rs  models.rs  oidc.rs  pdf.rs  schema.rs  tasks.rs  views.rs
static/css/: signer.css
static/js/: signer.js
templates/: base.html.tera  envelope.html.tera  envelope_sign.html.tera  envelope_sign_completed.html.tera  envelopes.html.tera  pdf.html.tera  template.html.tera  templates.html.tera
templates_email/: email_base.html  email_base.txt  envelope_complete.html  envelope_complete.txt  sig_request.html  sig_request.txt
